<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.muhammadfaiq.layouts2.deactivate"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/d_instruction" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deactivate_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_no"/>
    </LinearLayout>
</LinearLayout>
