<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:hint="@string/signup"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="4dp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="42dp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/userName"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/fullname"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fullName"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_alignLeft="@+id/password" />

    <LinearLayout
        android:id="@+id/l_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/email">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/h_dob"
            android:inputType="date"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignStart="@+id/l_dob"
        android:layout_below="@+id/l_dob"
        android:layout_alignLeft="@+id/l_dob">
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_signup"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_alignStart="@+id/term"
        android:layout_below="@+id/term"
        android:layout_alignLeft="@+id/term" />
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_alignStart="@+id/button_signup"
        android:layout_below="@+id/button_signup"
        android:textSize="24sp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_alignLeft="@+id/button_signup"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />



    <ImageButton
        android:id="@+id/fbImagButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/or"
        android:layout_alignStart="@+id/or"
        android:layout_below="@+id/or"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button_signup"
        app:srcCompat="@drawable/facebook"
        android:layout_alignLeft="@+id/or" />
</RelativeLayout>

</ScrollView>
